# pypi2nix

./: .bumpv.cfg  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  README.rst  bootstrap_test.nix  conftest.py  constraints.txt  default.nix  deploy_rsa.enc  deploy_rsa.pub  plone.cfg  plone.nix  plone2nix.py  plonedeps  prepare-test-data.py  pytest.ini  python2nix.py  release.nix  requirements-dev.txt  requirements.nix  requirements.txt  requirements_frozen.txt  requirements_override.nix  setup.cfg  setup.py  shell.nix  test.nix  wrapper.nix
.travis/: build  script
almir/: 01.json  01.nix  01.txt
examples/: Makefile  aiohttp_override.nix  awscli_override.nix  connexion_override.nix  default.nix  lektor_override.nix  mercurial_override.nix  packages_with_util.nix  requirements.frozen_override.nix  scipy_override.nix  sentry.nix  sentry.txt  sentry_generated.nix  sentry_override.nix  sentry_overwrite.nix  string_in_file  test_with_packages.sh  vulnix_override.nix
examples/hellohg-repo/: setup.py
integrationtests/: framework.py  test_aiohttp.py  test_appdirs.py  test_awscli_and_requests.py  test_connexion.py  test_dependency_graph.py  test_empy.py  test_fava.py  test_flake8.py  test_flake8_include_default_overrides.py  test_flake8_mercurial.py  test_flit.py  test_ldap.py  test_lektor.py  test_local_path.py  test_pillow.py  test_pynacl.py  test_relative_paths.py  test_rss2email.py  test_scipy.py  test_serpy_0_1_1.py  test_setuptools.py  test_tornado.py
integrationtests/awscli_and_requests/: requirements_override.nix
integrationtests/connexion/: requirements_override.nix
integrationtests/fava/: requirements_override.nix
integrationtests/flake8/: requirements_override.nix
integrationtests/flake8-mercurial/: requirements_override.nix
integrationtests/flake8_include_default_overrides/: requirements_override.nix
integrationtests/pip/: test_download.py  (+3 more)
mypy/: jsonschema.pyi  parsley.pyi  setuptools_scm.pyi  venv.pyi
plone/: 4.1.6.json  4.1.6.txt  4.2.5.json  4.2.5.txt  4.3.0.json  4.3.0.txt  4.3.1.json  4.3.1.nix  4.3.1.txt  43.cfg  43.json  43.nix  43.txt  43rc1.cfg  43rc1.json  43rc1.nix  43rc1.txt  Makefile  buildout.cfg  dev.nix
pypi2nix/: __init__.py  buildout.py  cli.py  py2txt.py  tests.py  txt2json.py
python2nix/: __init__.py  cli.py  config.py  scripts.py  utils.py
scripts/: build-pip.nix  build_wheel.py  deploy_to_pypi.py  format-sources.sh  format_sources.py  install_test.py  package_source.py  prepare_test_data.py  repository.py  run-integration-tests.py  run_integration_tests.py  update_dependencies.py  update_pip_wheel.py  update_python_packages.py  update_wheels.py
sentry/: 5.4.5.nix  5.4.5.txt  Makefile  dev.nix  generated.json  generated.nix  generated.wheels
source/: conf.py  development.rst  external-dependencies.rst  index.rst  modules.rst
src/: __main__.py
tests/: switches.py  test_cli.py  test_nix.py  test_prefetch_url.py  test_requirement.py  test_sources.py
unittests/: logger.py  package_generator.py  templates.py  test_archive.py  test_dependency_graph.py  test_dependency_graph_serialization.py  test_environment_marker.py  test_lazy_property.py  test_license.py  test_logger.py  test_memoize.py  test_network_file.py  test_nix.py  test_package_generator.py  test_package_source.py  test_prefetch_url.py  test_project_directory.py  test_pypi.py  test_python_version.py  test_requirement.py  test_requirement_collector.py  test_requirement_dependency_retriever.py  test_requirement_parser.py  test_requirement_set.py  test_requirements_file.py  test_source_distribution.py  test_sources.py  test_target_platform.py  test_util_cmd.py  test_wheel.py  test_wheel_builder.py
(+159 files in other folders)
