[metadata]
name = pypi2nix
version = file: src/pypi2nix/VERSION
author = Rok Garbas, Cillian de Róiste, Jaka Hudoklin
description = A tool that generates nix expressions for your python packages, so you do not have to.
long_description = file: README.rst
license = BSD
keywords = nixos, nix, packaging
url = https://github.com/nix-community/pypi2nix

[options]
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
packages =
    pypi2nix
    pypi2nix.pip
    pypi2nix.wheels
    pypi2nix.package
    pypi2nix.external_dependencies
    pypi2nix.external_dependency_collector
package_dir =
    = src
    pypi2nix = src/pypi2nix
    pypi2nix.pip = src/pypi2nix/pip
    pypi2nix.wheels = src/pypi2nix/wheels
    pypi2nix.package = src/pypi2nix/package
    pypi2nix.external_dependencies = src/pypi2nix/external_dependencies
    pypi2nix.external_dependency_collector = src/pypi2nix/external_dependency_collector
install_requires =
    attrs
    click
    jinja2
    jsonschema
    nix-prefetch-github
    packaging
    Parsley
    pyyaml
    setuptools
    setuptools-scm
    toml
include_package_data = true

[options.entry_points]
console_scripts =
    pypi2nix = pypi2nix.cli:main

[flake8]
ignore = E203, E266, E501, W503, F403, E231
max-line-length = 79
max-complexity = 8
select = B,C,E,F,W,T4,B9
enabled_extensions = U10,T100,C90
per-file-ignores =
    **/__init__.py:F401
exclude =
    build/**

[isort]
line_length = 159
force_single_line = True
default_section=FIRSTPARTY
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party =
    pypi2nix
known_third_party =
    setuptools
skip_glob =
    /integrationtests/pypi2nix/**
    /unittests/templates/**
    result/**
filter_files = True

[mypy]
show_column_numbers=True
show_error_context=True
ignore_missing_imports=False
disallow_untyped_calls=False
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=False
disallow_untyped_defs=True
check_untyped_defs=True
mypy_path = mypy:src
no_implicit_optional = True
